--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
-.app__body {
+.app {
   display: flex;
+  flex-direction: column;
+  background-color: #f3f2ef;
+  align-items: center;
 }
 
-.app{
-    background: #f3f2ef;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.app__body {
+  display: flex;
+  width: 90%;
+  margin-top: 35px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
