--- a/src/Header.css
+++ b/src/Header.css
@@ -1,22 +1,25 @@
 .header {
-  justify-content: space-evenly;
-  display: flex;
-  border-bottom: 0.5px solid lightgray;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  top: 0;
   position: sticky;
-  z-index: 1;
+  top: 0;
+  display: flex;
+  background-color: white;
+  justify-content: space-evenly;
+  border-bottom: 0.1px solid lightgray;
+  padding-top: 10px;
+  width: 100%;
+  z-index: 999;
 }
+
 .header__left {
   display: flex;
 }
+
 .header__left > img {
   object-fit: contain;
-  margin-right: 10px;
   height: 40px;
+  margin-right: 10px;
 }
+
 .header__search {
   padding: 10px;
   display: flex;
@@ -26,6 +29,7 @@
   color: gray;
   background-color: #eef3f8;
 }
+
 .header__search > input {
   outline: none;
   border: none;
