Completed the project

--- a/src/HeaderOption.css
+++ b/src/HeaderOption.css
@@ -7,15 +7,17 @@
   cursor: pointer;
 }
 
+.headerOption__icon {
+  object-fit: contain;
+  height: 25px !important;
+  width: 25px !important;
+}
+
 .headerOption:hover {
   color: black;
 }
+
 .headerOption__title {
   font-size: 12px;
   font-weight: 400;
-}
-.headerOption_icon {
-  height: 25px !important;
-  width: 25px !important;
-  object-fit: contain;
 }
